# ai-service-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/application/: __init__.py  ai_service.py  faq_service.py
app/core/: config.py  error_handlers.py  logging_config.py  middleware.py
app/domain/: __init__.py  exceptions.py  faq.py  location.py  models.py  provider.py  tasks.py
app/infrastructure/: __init__.py  config_schema.py  dev_location_repository.py  openai_provider.py  yaml_config.py
app/infrastructure/data/: dev_construction_sites.json
app/interfaces/: __init__.py  faq_routes.py  internal_routes.py  schemas.py
config/: ai_providers.yaml
tests/: conftest.py
tests/contract/: test_provider_protocol.py
tests/integration/: test_faq_routes.py  test_internal_routes.py
tests/unit/: test_ai_service.py  test_config_schema.py  test_faq_service.py  test_yaml_loader.py
